--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fluentui/react": "^8.114.0",
     "axios": "^1.6.2",
     "react": "^18.2.0",
+    "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-slick": "^0.29.0",
